@@ -9,13 +9,18 @@
     </ul>
   </div>
   <div class="c-section-header markdown-section">
-    <div class="markdown-message"></div>
     <h1 class="c-section-header__title">Markdown Documentation</h1>
     <div>This markdown documentation is here to allow us, the people who build and use this documentation tool to freely add in any input towards documenting the UI assets accross merrill platforms. Feel free to jot any documentation down. Please be as consice as you can when documenting.</div>
     <div>*When documentation is validated, it will be migrated into the codebase and out of the markdown section.</div>
     <a href="#" class="c-btn edit-markdown-button">Edit</a>
     <a href="#" class="c-btn markdown-save-button">Save</a>
   </div>
-  <textarea id="markdown-edit-section">
-  </textarea>
+
+  <div class="markdown-message"></div>
+  <form>
+    <input class="markdown-nbk-id" type="" name="" placeholder="nbk id" style="width: 200px;">
+    <input class="markdown-commit-message" type="" name="" placeholder="message" style="">
+    <textarea id="markdown-edit-section">
+    </textarea>
+  </form>
 </section>
